--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@types/bcryptjs": "^2.4.4",
