--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-tailwind/react": "^2.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@stripe/stripe-js": "^2.1.6",
     "@types/bcryptjs": "^2.4.4",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -30,6 +31,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "stripe": "^13.6.0",
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
