--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "micro-cors": "^0.1.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.29",
