--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.1.1",
     "@stripe/stripe-js": "^2.1.6",
     "@types/bcryptjs": "^2.4.4",
+    "@types/micro-cors": "^0.1.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
@@ -32,6 +33,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-merge-refs": "^2.0.2",
     "stripe": "^13.6.0",
     "tailwindcss": "3.3.3"
   },
