--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "check-format": "prettier --check",
     "check-lint": "eslint . --ext ts --ext tsx --ext js",
     "format": "prettier --write .",
-    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build"
+    "test-all": "npm run check-format && npm run check-lint && npm run check-types && npm run build",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
